--- a/language_curse/french/french.html
+++ b/language_curse/french/french.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Course - Language Learning Center</title>
-    <link rel="stylesheet" href="english.css">
+    <title>French Course - Language Learning Center</title>
+    <link rel="stylesheet" href="french.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
         <!-- Header Section -->
         <header class="course-header">
             <div class="header-content">
-                <h1>English Language Course</h1>
-                <p class="subtitle">Master the global language of business and communication</p>
+                <h1>French Language Course</h1>
+                <p class="subtitle">Discover the language of love and culture</p>
                 <div class="course-badges">
                     <span class="badge"><i class="fas fa-clock"></i> 12 Weeks</span>
                     <span class="badge"><i class="fas fa-signal"></i> All Levels</span>
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="header-image">
-                <img src="F:\scound term\web\project\web_project\language_curse\Statue of Liberty.jpg" alt="English Course">
+                <img src="F:\scound term\web\project\web_project\language_curse\Eiffeltower .jpg" alt="French Course">
             </div>
         </header>
 
@@ -32,8 +32,8 @@
                 <li><a href="#curriculum">Curriculum</a></li>
                 <li><a href="#features">Why Choose Us</a></li>
                 <li><a href="#instructors">Instructors</a></li>
-                <li><a href="#comments">Comments</a></li>
                 <li><a href="#stats">Statistics</a></li>
+                <li><a href="#comments">Comments</a></li>
                 <li><a href="#enrollment">Enrollment</a></li>
             </ul>
         </nav>
@@ -66,7 +66,7 @@
                     <i class="fas fa-certificate"></i>
                     <h3>Certification</h3>
                     <ul>
-                        <li>CEFR aligned certification</li>
+                        <li>DELF/DALF preparation</li>
                         <li>Progress tracking</li>
                         <li>Final assessment</li>
                         <li>International recognition</li>
@@ -122,7 +122,7 @@
                 <div class="feature">
                     <i class="fas fa-chalkboard-teacher"></i>
                     <h3>Expert Instructors</h3>
-                    <p>Learn from certified native English speakers with years of teaching experience.</p>
+                    <p>Learn from certified native French speakers with years of teaching experience.</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-laptop"></i>
@@ -148,28 +148,28 @@
             <div class="instructors-grid">
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=John" alt="John Smith">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Marie" alt="Marie Dubois">
                     </div>
                     <div class="instructor-info">
-                        <h3>John Smith</h3>
-                        <p class="instructor-title">Senior English Instructor</p>
-                        <p class="instructor-bio">10+ years of teaching experience, CELTA certified, specializes in business English and academic writing.</p>
+                        <h3>Marie Dubois</h3>
+                        <p class="instructor-title">Senior French Instructor</p>
+                        <p class="instructor-bio">10+ years of teaching experience, DELF certified, specializes in business French and academic writing.</p>
                         <div class="instructor-expertise">
-                            <span>Business English</span>
+                            <span>Business French</span>
                             <span>Academic Writing</span>
-                            <span>IELTS Preparation</span>
+                            <span>DELF Preparation</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah Williams">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Jean" alt="Jean Martin">
                     </div>
                     <div class="instructor-info">
-                        <h3>Sarah Williams</h3>
+                        <h3>Jean Martin</h3>
                         <p class="instructor-title">Conversation Specialist</p>
-                        <p class="instructor-bio">8 years of experience in teaching conversational English, expert in pronunciation and public speaking.</p>
+                        <p class="instructor-bio">8 years of experience in teaching conversational French, expert in pronunciation and public speaking.</p>
                         <div class="instructor-expertise">
                             <span>Conversation</span>
                             <span>Pronunciation</span>
@@ -180,16 +180,16 @@
 
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Michael" alt="Michael Brown">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sophie" alt="Sophie Laurent">
                     </div>
                     <div class="instructor-info">
-                        <h3>Michael Brown</h3>
+                        <h3>Sophie Laurent</h3>
                         <p class="instructor-title">Grammar Expert</p>
-                        <p class="instructor-bio">12 years of teaching experience, specializes in grammar and exam preparation, TOEFL certified.</p>
+                        <p class="instructor-bio">12 years of teaching experience, specializes in grammar and exam preparation, DALF certified.</p>
                         <div class="instructor-expertise">
                             <span>Grammar</span>
                             <span>Exam Prep</span>
-                            <span>TOEFL</span>
+                            <span>DALF</span>
                         </div>
                     </div>
                 </div>
@@ -203,9 +203,9 @@
                 <div class="comments-track">
                     <div class="comment-card">
                         <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah Johnson">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Emma" alt="Emma Wilson">
                             <div class="comment-info">
-                                <h3>Sarah Johnson</h3>
+                                <h3>Emma Wilson</h3>
                                 <span class="comment-date">Advanced Level</span>
                             </div>
                         </div>
@@ -216,14 +216,14 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="comment-text">"The course structure is excellent! I've improved my business English significantly. The teachers are very supportive and the speaking practice sessions are incredibly helpful."</p>
+                        <p class="comment-text">"The course structure is excellent! I've improved my French significantly. The teachers are very supportive and the speaking practice sessions are incredibly helpful."</p>
                     </div>
 
                     <div class="comment-card">
                         <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Michael" alt="Michael Chen">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Thomas" alt="Thomas Chen">
                             <div class="comment-info">
-                                <h3>Michael Chen</h3>
+                                <h3>Thomas Chen</h3>
                                 <span class="comment-date">Intermediate Level</span>
                             </div>
                         </div>
@@ -234,14 +234,14 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="comment-text">"I started as a beginner and now I can confidently communicate in English. The small group sessions make it easy to practice speaking, and the teachers are always available to help."</p>
+                        <p class="comment-text">"I started as a beginner and now I can confidently communicate in French. The small group sessions make it easy to practice speaking, and the teachers are always available to help."</p>
                     </div>
 
                     <div class="comment-card">
                         <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Emma" alt="Emma Rodriguez">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Isabella" alt="Isabella Rodriguez">
                             <div class="comment-info">
-                                <h3>Emma Rodriguez</h3>
+                                <h3>Isabella Rodriguez</h3>
                                 <span class="comment-date">Beginner to Intermediate</span>
                             </div>
                         </div>
@@ -293,7 +293,7 @@
         <section id="enrollment" class="enrollment-section">
             <div class="enrollment-content">
                 <h2>Ready to Start Your Journey?</h2>
-                <p>Join our next batch and begin your English learning adventure.</p>
+                <p>Join our next batch and begin your French learning adventure.</p>
                 <div class="enrollment-details">
                     <div class="price">
                         <span class="amount">$499</span>
@@ -320,9 +320,9 @@
                         <div class="form-group">
                             <select id="instructor" name="instructor" required>
                                 <option value="">Select Your Preferred Instructor</option>
-                                <option value="john-smith">John Smith - Business English & Academic Writing</option>
-                                <option value="sarah-williams">Sarah Williams - Conversation & Pronunciation</option>
-                                <option value="michael-brown">Michael Brown - Grammar & Exam Preparation</option>
+                                <option value="marie-dubois">Marie Dubois - Business French & Academic Writing</option>
+                                <option value="jean-martin">Jean Martin - Conversation & Pronunciation</option>
+                                <option value="sophie-laurent">Sophie Laurent - Grammar & Exam Preparation</option>
                             </select>
                         </div>
                         <button type="submit" class="enroll-btn">Enroll Now</button>
@@ -335,6 +335,6 @@
             </div>
         </section>
     </div>
-    <script src="english.js"></script>
+    <script src="french.js"></script>
 </body>
 </html> 
