--- a/language_curse/japanese/japanese.html
+++ b/language_curse/japanese/japanese.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Course - Language Learning Center</title>
-    <link rel="stylesheet" href="english.css">
+    <title>Japanese Course - Language Learning Center</title>
+    <link rel="stylesheet" href="japanese.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -12,16 +12,16 @@
         <!-- Header Section -->
         <header class="course-header">
             <div class="header-content">
-                <h1>English Language Course</h1>
-                <p class="subtitle">Master the global language of business and communication</p>
+                <h1>Japanese Language Course</h1>
+                <p class="subtitle">Explore the fascinating world of Japanese language and culture</p>
                 <div class="course-badges">
-                    <span class="badge"><i class="fas fa-clock"></i> 12 Weeks</span>
-                    <span class="badge"><i class="fas fa-signal"></i> All Levels</span>
+                    <span class="badge"><i class="fas fa-clock"></i> 16 Weeks</span>
+                    <span class="badge"><i class="fas fa-signal"></i> N5 to N3</span>
                     <span class="badge"><i class="fas fa-users"></i> Small Groups</span>
                 </div>
             </div>
             <div class="header-image">
-                <img src="F:\scound term\web\project\web_project\language_curse\Statue of Liberty.jpg" alt="English Course">
+                <img src="../japan.jpg" alt="Japanese Course">
             </div>
         </header>
 
@@ -32,8 +32,8 @@
                 <li><a href="#curriculum">Curriculum</a></li>
                 <li><a href="#features">Why Choose Us</a></li>
                 <li><a href="#instructors">Instructors</a></li>
-                <li><a href="#comments">Comments</a></li>
                 <li><a href="#stats">Statistics</a></li>
+                <li><a href="#comments">Comments</a></li>
                 <li><a href="#enrollment">Enrollment</a></li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
                     <i class="fas fa-graduation-cap"></i>
                     <h3>Course Structure</h3>
                     <ul>
-                        <li>12-week comprehensive program</li>
+                        <li>16-week comprehensive program</li>
                         <li>3 sessions per week</li>
                         <li>2-hour interactive classes</li>
                         <li>Weekly progress assessments</li>
@@ -66,7 +66,7 @@
                     <i class="fas fa-certificate"></i>
                     <h3>Certification</h3>
                     <ul>
-                        <li>CEFR aligned certification</li>
+                        <li>JLPT preparation</li>
                         <li>Progress tracking</li>
                         <li>Final assessment</li>
                         <li>International recognition</li>
@@ -81,34 +81,34 @@
             <div class="curriculum-timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Weeks 1-4: Foundation</h3>
+                        <h3>Weeks 1-5: Foundation</h3>
                         <ul>
-                            <li>Basic grammar and vocabulary</li>
-                            <li>Essential communication skills</li>
-                            <li>Pronunciation fundamentals</li>
-                            <li>Reading comprehension basics</li>
+                            <li>Hiragana and Katakana</li>
+                            <li>Basic grammar structures</li>
+                            <li>Essential vocabulary</li>
+                            <li>Simple conversations</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Weeks 5-8: Intermediate</h3>
+                        <h3>Weeks 6-11: Intermediate</h3>
                         <ul>
-                            <li>Advanced grammar structures</li>
-                            <li>Business communication</li>
-                            <li>Writing skills development</li>
-                            <li>Listening comprehension</li>
+                            <li>Kanji introduction</li>
+                            <li>Complex grammar</li>
+                            <li>Reading comprehension</li>
+                            <li>Writing practice</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Weeks 9-12: Advanced</h3>
+                        <h3>Weeks 12-16: Advanced</h3>
                         <ul>
-                            <li>Professional communication</li>
-                            <li>Academic writing</li>
-                            <li>Public speaking</li>
-                            <li>Cultural understanding</li>
+                            <li>Advanced Kanji</li>
+                            <li>Business Japanese</li>
+                            <li>Cultural context</li>
+                            <li>JLPT preparation</li>
                         </ul>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="feature">
                     <i class="fas fa-chalkboard-teacher"></i>
                     <h3>Expert Instructors</h3>
-                    <p>Learn from certified native English speakers with years of teaching experience.</p>
+                    <p>Learn from certified native Japanese speakers with years of teaching experience.</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-laptop"></i>
@@ -148,48 +148,48 @@
             <div class="instructors-grid">
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=John" alt="John Smith">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Yuki" alt="Yuki Tanaka">
                     </div>
                     <div class="instructor-info">
-                        <h3>John Smith</h3>
-                        <p class="instructor-title">Senior English Instructor</p>
-                        <p class="instructor-bio">10+ years of teaching experience, CELTA certified, specializes in business English and academic writing.</p>
+                        <h3>Yuki Tanaka</h3>
+                        <p class="instructor-title">Senior Japanese Instructor</p>
+                        <p class="instructor-bio">10+ years of teaching experience, JLPT certified, specializes in business Japanese and cultural studies.</p>
                         <div class="instructor-expertise">
-                            <span>Business English</span>
-                            <span>Academic Writing</span>
-                            <span>IELTS Preparation</span>
+                            <span>Business Japanese</span>
+                            <span>Cultural Studies</span>
+                            <span>JLPT Preparation</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah Williams">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Hiroshi" alt="Hiroshi Sato">
                     </div>
                     <div class="instructor-info">
-                        <h3>Sarah Williams</h3>
-                        <p class="instructor-title">Conversation Specialist</p>
-                        <p class="instructor-bio">8 years of experience in teaching conversational English, expert in pronunciation and public speaking.</p>
+                        <h3>Hiroshi Sato</h3>
+                        <p class="instructor-title">Writing Specialist</p>
+                        <p class="instructor-bio">8 years of experience in teaching Japanese writing systems, expert in Kanji and calligraphy.</p>
                         <div class="instructor-expertise">
-                            <span>Conversation</span>
-                            <span>Pronunciation</span>
-                            <span>Public Speaking</span>
+                            <span>Kanji</span>
+                            <span>Calligraphy</span>
+                            <span>Writing Systems</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="instructor-card">
                     <div class="instructor-image">
-                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Michael" alt="Michael Brown">
+                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Aiko" alt="Aiko Yamamoto">
                     </div>
                     <div class="instructor-info">
-                        <h3>Michael Brown</h3>
+                        <h3>Aiko Yamamoto</h3>
                         <p class="instructor-title">Grammar Expert</p>
-                        <p class="instructor-bio">12 years of teaching experience, specializes in grammar and exam preparation, TOEFL certified.</p>
+                        <p class="instructor-bio">12 years of teaching experience, specializes in grammar and exam preparation, JLPT certified.</p>
                         <div class="instructor-expertise">
                             <span>Grammar</span>
                             <span>Exam Prep</span>
-                            <span>TOEFL</span>
+                            <span>JLPT</span>
                         </div>
                     </div>
                 </div>
@@ -203,10 +203,10 @@
                 <div class="comments-track">
                     <div class="comment-card">
                         <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sarah" alt="Sarah Johnson">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Tom" alt="Tom Wilson">
                             <div class="comment-info">
-                                <h3>Sarah Johnson</h3>
-                                <span class="comment-date">Advanced Level</span>
+                                <h3>Tom Wilson</h3>
+                                <span class="comment-date">N3 Level</span>
                             </div>
                         </div>
                         <div class="rating">
@@ -216,15 +216,15 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="comment-text">"The course structure is excellent! I've improved my business English significantly. The teachers are very supportive and the speaking practice sessions are incredibly helpful."</p>
+                        <p class="comment-text">"The course structure is excellent! I've improved my Japanese significantly. The teachers are very supportive and the speaking practice sessions are incredibly helpful."</p>
                     </div>
 
                     <div class="comment-card">
                         <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Michael" alt="Michael Chen">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Emma" alt="Emma Chen">
                             <div class="comment-info">
-                                <h3>Michael Chen</h3>
-                                <span class="comment-date">Intermediate Level</span>
+                                <h3>Emma Chen</h3>
+                                <span class="comment-date">N4 Level</span>
                             </div>
                         </div>
                         <div class="rating">
@@ -234,15 +234,15 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="comment-text">"I started as a beginner and now I can confidently communicate in English. The small group sessions make it easy to practice speaking, and the teachers are always available to help."</p>
+                        <p class="comment-text">"I started as a beginner and now I can confidently communicate in Japanese. The small group sessions make it easy to practice speaking, and the teachers are always available to help."</p>
                     </div>
 
                     <div class="comment-card">
                         <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Emma" alt="Emma Rodriguez">
+                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Alex" alt="Alex Rodriguez">
                             <div class="comment-info">
-                                <h3>Emma Rodriguez</h3>
-                                <span class="comment-date">Beginner to Intermediate</span>
+                                <h3>Alex Rodriguez</h3>
+                                <span class="comment-date">N5 to N4</span>
                             </div>
                         </div>
                         <div class="rating">
@@ -293,11 +293,11 @@
         <section id="enrollment" class="enrollment-section">
             <div class="enrollment-content">
                 <h2>Ready to Start Your Journey?</h2>
-                <p>Join our next batch and begin your English learning adventure.</p>
+                <p>Join our next batch and begin your Japanese learning adventure.</p>
                 <div class="enrollment-details">
                     <div class="price">
-                        <span class="amount">$499</span>
-                        <span class="period">/ 12 weeks</span>
+                        <span class="amount">$599</span>
+                        <span class="period">/ 16 weeks</span>
                     </div>
                     <form id="enrollment-form" class="enrollment-form">
                         <div class="form-group">
@@ -312,17 +312,17 @@
                         <div class="form-group">
                             <select id="level" name="level" required>
                                 <option value="">Select Your Level</option>
-                                <option value="beginner">Beginner</option>
-                                <option value="intermediate">Intermediate</option>
-                                <option value="advanced">Advanced</option>
+                                <option value="n5">N5 (Beginner)</option>
+                                <option value="n4">N4 (Elementary)</option>
+                                <option value="n3">N3 (Intermediate)</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <select id="instructor" name="instructor" required>
                                 <option value="">Select Your Preferred Instructor</option>
-                                <option value="john-smith">John Smith - Business English & Academic Writing</option>
-                                <option value="sarah-williams">Sarah Williams - Conversation & Pronunciation</option>
-                                <option value="michael-brown">Michael Brown - Grammar & Exam Preparation</option>
+                                <option value="yuki-tanaka">Yuki Tanaka - Business Japanese & Cultural Studies</option>
+                                <option value="hiroshi-sato">Hiroshi Sato - Writing & Calligraphy</option>
+                                <option value="aiko-yamamoto">Aiko Yamamoto - Grammar & JLPT Preparation</option>
                             </select>
                         </div>
                         <button type="submit" class="enroll-btn">Enroll Now</button>
@@ -335,6 +335,6 @@
             </div>
         </section>
     </div>
-    <script src="english.js"></script>
+    <script src="japanese.js"></script>
 </body>
 </html> 
